changed sconscripts to allow project to build correctly
Change-Id: I836b363b5e10bfb14de23a0092f1422bb16ee942

--- a/src/verilator/nvdla/SConscript
+++ b/src/verilator/nvdla/SConscript
@@ -29,9 +29,9 @@
 
 Import('*')
 
-if env['USE_NVDLA']
-	SimObject('NVDLAWrapper.py')
-	Source('nvdla_wrapper.cc')
+if env['USE_NVDLA']:
+        SimObject('NVDLAWrapper.py')
+        Source('nvdla_wrapper.cc')
 
 	SimObject('NVDLASystem.py')
 	#Source('system.cc')
